<resources>
    <string name="app_name">GST Genie R</string>
    <string name="nameValidation">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_.#</string>
    <string name="gstinValidation">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="exit">Exit</string>
    <string name="remember_me">Remember Me</string>
    <string name="invalidUser">Invalid Username</string>
    <string name="invalidPassword">Invalid Password</string>
    <string name="emptyUser">Username  cannot be empty</string>
    <string name="emptyPassword">Password cannot be empty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="firm_name">Firm Name*</string>
    <string name="phone">Phone*</string>
    <string name="email">Email*</string>
    <string name="address">Address*</string>
    <string name="pos">Pos*</string>
    <string name="is_main_office">Is main office</string>
    <string name="gstin">GSTIN</string>
    <string name="reference_no">Reference no</string>
    <string name="bill_no_prefix">Bill no prefix</string>
    <string name="gst_in_hint">eg.00ABCDE0123A1ZZ</string>
    <string name="apply">Apply</string>
    <string name="header_text">Header Text</string>
    <string name="footer_text">Footer Text</string>
    <string name="header_text_line_one">Header Text Line 1</string>
    <string name="header_text_line_two">Header Text Line 2</string>
    <string name="header_text_line_three">Header Text Line 3</string>
    <string name="header_text_line_four">Header Text Line 4</string>
    <string name="header_text_line_five">Header Text Line 5</string>
    <string name="footer_text_line_one">Footer Text Line 1</string>
    <string name="footer_text_line_two">Footer Text Line 2</string>
    <string name="footer_text_line_three">Footer Text Line 3</string>
    <string name="footer_text_line_four">Footer Text Line 4</string>
    <string name="footer_text_line_five">Footer Text Line 5</string>
    <string name="close">Close</string>
    <string name="factory_reset_title">Factory Reset (deletes all the current data &amp; settings)</string>
    <string name="factory_reset">Factory Reset</string>
    <string name="back_up">Back Up</string>
    <string name="restore_default_title">Restore Default (only settings are reset)</string>
    <string name="restore_default">Restore Default</string>
    <string name="customer_master">Customer Master</string>
    <string name="item_master">Item Master</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
    <string name="configuration">Configuration</string>
    <string name="dayend">Day End</string>
    <string name="billing">Billing</string>
    <string name="wep_pos">Wep Pos</string>
    <string name="price_stock">Price/Stock</string>
    <string name="supplier_details">Supplier Details</string>
    <string name="supplier_item_linkage">Supplier Item Linkage</string>
    <string name="company_mail_address">wep@india.com</string>
    <string name="manual_dayend_message">"Day end is manual</string>
    <string name="auto_dayend_message">"Day end is in auto mode. Kindly goto settings to change date manually.</string>
    <string name="randomDate">27/12/2018</string>
    <string name="department_name">Department Name</string>
    <string name="serial_no">S.No</string>
    <string name="department_code">Dept Code</string>
    <string name="dept_name">Dept Name</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="department_delete_msg">"Are you sure you want to delete this department. It will delete corresponding Category's and Items also"</string>
    <string name="brand_delete_msg">"Are you sure you want to delete this brand. It will delete corresponding Category's and Items also"</string>
    <string name="category_name">Category Name</string>
    <string name="category_code">Categ Code</string>
    <string name="categ_name">Categ Name</string>
    <string name="category_delete_msg">"Are you sure you want to Delete this Category. It will delete corresponding Items linkage also"</string>
    <string name="expenditure_name">Expenditure Name</string>
    <string name="description_name">Description Name</string>
    <string name="description">Description</string>
    <string name="id">Id</string>
    <string name="discount_description">Discount Description</string>
    <string name="discount_name">Discount Name</string>
    <string name="discount_percent">Discount%</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="percent">Percent</string>
    <string name="amount">Amount</string>
    <string name="two_digits_after_decimal">*Please note % entered is taken upto 2 digits after decimal</string>
    <string name="chargeable">Chargeable</string>
    <string name="charges_modes">Charges Modes</string>
    <string name="modes">Modes</string>
    <string name="barcode">Barcode</string>
    <string name="amount_eligible_to_reward_pt">Amount Eligible for Reward Points</string>
    <string name="amt_equivalent_to_reward_pts">Amount Equivalent to Reward Points</string>
    <string name="amt_equivalent_to_one_reward_pts">Amount Equivalent to 1 Reward Point</string>
    <string name="min_reward_pts_to_redeem">Minimum Reward Points to Redeem</string>
    <string name="please_enter_in_amount">Please enter in amount.</string>
    <string name="billing_add">+</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="wholesale_price">Whole Sale Price</string>
    <string name="save_bill">Save Bill</string>
    <string name="print_bill">Print Bill</string>
    <string name="proceed_to_pay">Proceed To Pay</string>
    <string name="fav">Fav</string>
    <string name="department">Department</string>
    <string name="category">Category</string>
    <string name="items">Items</string>
    <string name="search_customer_name_or_phone">Customer Name/Phone</string>
    <string name="phone_no">Phone No</string>
    <string name="search_items_name_barcode_short_code">Barcode,ItemName or ShortCode</string>
    <string name="short_code">Short Code</string>
    <string name="name">Name</string>
    <string name="mrp">MRP</string>
    <string name="sp">SP</string>
    <string name="quantity">Qty</string>
    <string name="hold_bill">Hold Bill</string>
    <string name="resume_bill">Resume Bill</string>
    <string name="reprint_bill">Reprint Bill</string>
    <string name="delete_bill">Delete Bill</string>
    <string name="inter_state">InterState</string>
    <string name="bill_number">Bill No</string>
    <string name="count">Count</string>
    <string name="discount">Discount</string>
    <string name="total_amount">Total Amount</string>
    <string name="cgst_rate">CGST Rate</string>
    <string name="cess_rate">cess Rate</string>
    <string name="sgst_rate">SGST Rate</string>
    <string name="igst_rate">IGST Rate</string>
    <string name="cgst_amount">CGST Amount</string>
    <string name="cess_amount">cess Amount</string>
    <string name="sgst_amount">SGST Amount</string>
    <string name="igst_amount">IGST Amount</string>
    <string name="other_charges">Other Charges</string>
    <string name="taxable_value">Taxable Value</string>
    <string name="tax_amounts">Tax Amount</string>
    <string name="hsn">HSN</string>
    <string name="rate">Rate</string>
    <string name="disc">Disc</string>
    <string name="zero">0</string>
    <string name="sales_man_id">Sales Man ID</string>
    <string name="search_items_name_barcode">Barcode or ItemName</string>
    <string name="hold_resume_bill">Hold/Resume Bill</string>
    <string name="billing_list_selected_item_delete_msg">"Are you sure you want to delete this item from the list."</string>
    <string name="billing_list_all_item_delete_msg">"Are you sure you want to delete all the item(s) from the list."</string>
    <string name="no_item_to_delete_message">No item to delete</string>
    <string name="clear_screen_message">Are you sure to clear the screen</string>
    <string name="customer_statecode_same_as_owner_message">You have choosen state same as owner. Therefore this cannot be interstate transaction. Either choose another state or uncheck interstate box</string>
    <string name="total_taxable_value">Total Taxable Value</string>
    <string name="retail_price_item">Retail Price</string>
    <string name="less_stock_message">Stock is less, present stock quantity is  </string>
    <string name="no_rate_choosen_message">No Rate choosen</string>
    <string name="choose_one_rate_message">Kindly choose only one rate</string>
    <string name="supplier_name">Name*</string>
    <string name="supplier_address">Address</string>
    <string name="save">Save</string>
    <string name="uom">UOM*</string>
    <string name="brand">Brand</string>
    <string name="barcode_item">Barcode</string>
    <string name="item_name">ItemName</string>
    <string name="item_long_name">Item Long Name</string>
    <string name="short_code_item">Short Code</string>
    <string name="short_name">Item Short Name*</string>
    <string name="mrp_item">MRP</string>
    <string name="retail_price">Retail Price*</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="pack_size">Pack Size</string>
    <string name="hsn_code">HSNCode</string>
    <string name="expire_date">Expire Date</string>
    <string name="browse_image">Browse Image</string>
    <string name="active">Active</string>
    <string name="item_info">Item Information</string>
    <string name="tax_info">GST Tax Rates</string>
    <string name="image_and_status">Image &amp; Status</string>
    <string name="generate_csv">Generate CSV</string>
    <string name="browse_file">Browse File</string>
    <string name="upload_file">Upload File</string>
    <string name="file_path">File Path:</string>
    <string name="bill_amt">Bill Amount</string>
    <string name="date">Date</string>
    <string name="add_role">Add Role</string>
    <string name="user_management">User Management</string>
    <string name="purchase_order">Purchase Order</string>
    <string name="supplier_gstin">Supplier GSTIN</string>
    <string name="goods_inward_note">Goods Inward Note</string>
    <string name="invoice_no">Invoice No</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="item">Item</string>
    <string name="igst_amt">IGST Amt</string>
    <string name="cgst_amt">CGST Amt</string>
    <string name="utgst_sgst_amt">UTGST/SGST Amt</string>
    <string name="cess_amt">cess Amt</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="card_payment">Card Payment</string>
    <string name="coupon_payment">Coupon Payment</string>
    <string name="petty_cash_payment">PettyCash Payment</string>
    <string name="wallet_payment">Wallet Payment</string>
    <string name="mswipe_payment">MSwipe Payment</string>
    <string name="aeps_payment">AEPS Payment</string>
    <string name="total_items">Total Items</string>
    <string name="supplier_code">Supplier Code</string>
    <string name="recipient_gstin">Recipient GSTIN</string>
    <string name="recipient_state_code">Recipient State Code</string>
    <string name="recipient_name">Recipient Name</string>
    <string name="value">Value</string>
    <string name="gst_rate">GST Rate</string>
    <string name="nature_of_doc">Nature of Document</string>
    <string name="cust_state_code">Cust. StateCode</string>
    <string name="supply_type_report">G/S</string>
</resources>