<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

    <item android:title="Sales">
        <menu>
            <item
                android:id="@+id/nav_billing"
                android:icon="@mipmap/ic_config_payment_receipt"
                android:title="@string/billing" />
        </menu>
    </item>
    <!-- <item
         android:id="@+id/nav_master"
         android:icon="@mipmap/ic_config_payment_receipt"
         android:title="Masters" />-->
    <item android:title="Masters">
        <menu>

            <item
                android:id="@+id/nav_item_master"
                android:icon="@mipmap/ic_supplier_details"
                android:title="@string/item_master" />
            <item
                android:id="@+id/nav_customer_master"
                android:icon="@mipmap/ic_customer_master"
                android:title="@string/customer_master" />

            <item
                android:id="@+id/nav_user_management"
                android:icon="@mipmap/ic_user_management"
                android:title="@string/user_management"/>
            <item
                android:id="@+id/nav_add_role"
                android:icon="@mipmap/ic_add_role_nav"
                android:title="@string/add_role" />
            <item
                android:id="@+id/nav_price_stock"
                android:icon="@mipmap/ic_nav_price_stock"
                android:title="@string/price_stock" />
            <item
                android:id="@+id/nav_config"
                android:icon="@mipmap/ic_configuration_nav"
                android:title="@string/configuration" />
            <item
                android:id="@+id/nav_dayend"
                android:icon="@mipmap/ic_nav_day_end"
                android:title="@string/dayend" />
        </menu>
    </item>

    <item android:title="Inward Management"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_supplier_details"
                android:icon="@mipmap/ic_supplier_details"
                android:title="@string/supplier_details" />
            <item
                android:id="@+id/nav_supplier_item_linkage"
                android:icon="@mipmap/ic_supplier_item_linkage"
                android:title="@string/supplier_item_linkage" />
            <item
                android:id="@+id/nav_purchase_order"
                android:icon="@mipmap/ic_purchase_order"
                android:title="@string/purchase_order" />
            <item
                android:id="@+id/nav_goods_inward_note"
                android:icon="@mipmap/ic_config_payment_receipt"
                android:title="@string/goods_inward_note" />
        </menu>
    </item>

    <item android:title="Reports">
        <menu>
            <item
                android:id="@+id/nav_reports"
                android:icon="@mipmap/ic_reports"
                android:title="Reports" />
        </menu>
    </item>
</menu>
