<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_gstr1_b2b_row_sno"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/serial_no" />

    <TextView
        android:id="@+id/tv_gstr1_b2b_row_gstin"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/recipient_gstin" />

    <TextView
        android:id="@+id/tv_gstr1_b2b_row_no"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/invoice_no" />

    <TextView
        android:id="@+id/tv_gstr1_b2b_row_date"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/invoice_date" />

    <TextView
        android:id="@+id/tv_gstr1_b2b_row_value"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/value" />

    <TextView
        android:id="@+id/tv_gstr1_b2b_row_gstrate"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/gst_rate" />

    <TextView
        android:id="@+id/tv_gstr1_b2b_row_taxable_value"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/taxable_value" />
    <TextView
        android:id="@+id/tv_gstr1_b2b_row_igst"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/igst_amt" />
    <TextView
        android:id="@+id/tv_gstr1_b2b_row_cgst"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/cgst_amt" />
    <TextView
        android:id="@+id/tv_gstr1_b2b_row_sgst"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/utgst_sgst_amt" />
    <TextView
        android:id="@+id/tv_gstr1_b2b_row_cess"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/cess_amt" />
    <TextView
        android:id="@+id/tv_gstr1_b2b_row_state_code"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/cust_state_code" />

</LinearLayout>