<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_gstr2_unregistered_row_sno"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/serial_no" />

    <TextView
        android:id="@+id/tv_gstr2_unregistered_row_name"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/supplier_gstin" />

    <TextView
        android:id="@+id/tv_gstr2_unregistered_row_bill_number"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/invoice_no" />
    <TextView
        android:id="@+id/tv_gstr2_unregistered_row_bill_date"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/invoice_date" />

    <TextView
        android:id="@+id/tv_gstr2_unregistered_row_supply_type"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/supply_type_report" />

    <TextView
        android:id="@+id/tv_gstr2_unregistered_row_hsn_code"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/hsn_code" />

    <TextView
        android:id="@+id/tv_gstr2_unregistered_row_value"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/value" />

    <TextView
        android:id="@+id/tv_gstr2_unregistered_row_taxable"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/taxable_value" />

    <TextView
        android:id="@+id/tv_gstr2_unregistered_row_igst"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/igst_amt" />

    <TextView
        android:id="@+id/tv_gstr2_unregistered_row_petty_cgst"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/cgst_amt" />

    <TextView
        android:id="@+id/tv_gstr2_unregistered_row_sgst"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/sgst_amount" />

    <TextView
        android:id="@+id/tv_gstr2_unregistered_row_cess"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/cess_amt" />

    <TextView
        android:id="@+id/tv_gstr2_unregistered_row_amount"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/amount" />

</LinearLayout>