<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_gstr1_hsn_sum_row_sno"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/serial_no" />

    <TextView
        android:id="@+id/tv_gstr1_hsn_sum_row_hsn_code"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/nature_of_doc" />

    <TextView
        android:id="@+id/tv_gstr1_hsn_sum_row_item_name"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/item_name" />
    <TextView
        android:id="@+id/tv_gstr1_hsn_sum_row_uom"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/uom" />

    <TextView
        android:id="@+id/tv_gstr1_hsn_sum_row_qty"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/quantity" />

    <TextView
        android:id="@+id/tv_gstr1_hsn_sum_row_value"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/value" />
    <TextView
        android:id="@+id/tv_gstr1_hsn_sum_row_gst_rate"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/gst_rate" />

    <TextView
        android:id="@+id/tv_gstr1_hsn_sum_row_taxable_value"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/taxable_value" />

    <TextView
        android:id="@+id/tv_gstr1_hsn_sum_row_igst"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/igst_amt" />

    <TextView
        android:id="@+id/tv_gstr1_hsn_sum_row_cgst"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/cgst_amt" />

    <TextView
        android:id="@+id/tv_gstr1_hsn_sum_row_sgst"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/sgst_amount" />

    <TextView
        android:id="@+id/tv_gstr1_hsn_sum_row_cess"
        style="@style/TV_Billing_Item_List"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="2dp"
        android:text="@string/cess_amt" />

</LinearLayout>